menambahkan halaman fragment baru untuk model SVM

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,9 +7,14 @@
         android:title="@string/title_information" />
 
     <item
-        android:id="@+id/navigation_recite"
+        android:id="@+id/navigation_cnn"
         android:icon="@drawable/ic_recite"
-        android:title="@string/title_recite" />
+        android:title="@string/model_cnn" />
+
+    <item
+        android:id="@+id/navigation_svm"
+        android:icon="@drawable/ic_recite"
+        android:title="@string/model_svm" />
 
     <item
         android:id="@+id/navigation_history"
