--- a/app/src/main/res/layout/fragment_cnn.xml
+++ b/app/src/main/res/layout/fragment_cnn.xml
@@ -65,7 +65,7 @@
                     android:id="@+id/TextAyat"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginTop="16dp"
                     android:fontFamily="@font/scheherazade"
                     android:text="@string/ayat_alMaidah"
                     android:textAlignment="center"
@@ -94,7 +94,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_marginTop="16dp"
-                    android:layout_marginBottom="32dp"
+                    android:layout_marginBottom="16dp"
                     android:background="@drawable/roundcorner"
                     android:clickable="true"
                     android:focusable="true"
@@ -144,7 +144,7 @@
                 android:id="@+id/tvTimer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="24dp"
                 android:text="00:00:00"
                 android:textSize="36sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -155,11 +155,10 @@
                 android:id="@+id/LinearButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
+                android:layout_marginTop="12dp"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
                 android:orientation="horizontal"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvTimer">
@@ -196,10 +195,26 @@
                     app:layout_constraintTop_toBottomOf="@id/containerAyat" />
             </LinearLayout>
 
+            <TextView
+                android:id="@+id/tv_fileUpload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="32dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/LinearButton"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:text="@string/upload_dengan_file"
+                android:textColor="@color/dark_blue"
+                android:textSize="16sp"
+                android:clickable="true"
+                android:visibility="visible"/>
+
             <ProgressBar
                 android:id="@+id/progressBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="284dp"
                 android:layout_gravity="center"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
